--- a/style.css
+++ b/style.css
@@ -21,6 +21,18 @@
     margin: 0;
     padding: 0;
   }
+
+  header {
+    background-color: #fff;
+    padding: 10px 0;
+    width: 100%;
+    height: 65px;
+    position: -webkit-sticky; /* For Safari */
+    position: fixed;
+    top: 0;
+    z-index: 1000;
+    box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.1);
+  }
   
   .container {
     width: 27%;
@@ -38,6 +50,7 @@
   .vote {
     width: 80%;
   margin: auto;
+  margin-top: 70px;
   padding: 20px;
   text-align: center;
   position: relative;
@@ -191,7 +204,7 @@
       width: 70%;
       padding-top: 50px;
       padding-bottom: 100px;
-      margin-bottom: 50px;
+      margin-bottom: 75px;
     }
 
     .container button {
