--- a/style.css
+++ b/style.css
@@ -40,7 +40,6 @@
     padding-top: 75px;
     padding-bottom: 130px;
     text-align: center;
-    position: relative; /* Needed for profile button positioning */
     background-color:#ffffffc2;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     border-radius: 15px;
@@ -167,6 +166,8 @@
       padding-top: 50px;
       padding-bottom: 100px;
       position: fixed;
+      left: 120px;
+      bottom: 90px;
     }
 
     .container button {
@@ -204,11 +205,12 @@
     .container {
       width: 80%;
       padding-top: 50px;
-      padding-bottom: 100px;
-      margin-bottom: 75px;
+      padding-bottom: 80px;
+      /* margin-bottom: 75px;  */
       position: fixed;
       left: 43px;
-      bottom: 90px;
+      top: 0;
+      bottom: 30px;
     }
 
     .container button {
